# data_warehouse

./: .gitignore  README.md  meltano.yml  pyproject.toml
create_databases/: customers_database.sql  data_warehouse.sql  idb.sql  idb_transfrom_to_dw.sql  olap.sql  sales_database.sql
extract/: __init__.py  client.py  tap.py  utils.py
orchestrate/dags/: common.py  general_etl.py  monthly_accountant_run.py  reset_state_workflow.py  snapshot_balance.py  snapshot_balance_preparing.py  utils.py
scripts/: chi_tiet_giam_2024_01.csv  chi_tiet_giam_2024_02.csv  chi_tiet_tang_2024_01.csv  chi_tiet_tang_2024_02.csv  kiem_tra_bao_cao_ke_toan.ipynb  tong_hop_2024_01.csv  tong_hop_2024_02.csv
transform/: dbt_project.yml
transform/macros/: convert_to_date_id.sql  get_month.sql  timestamp_to_local.sql
transform/models/: raw_sources.yml
transform/models/accountant/: fact_balance_adjustments.sql
transform/models/accountant/dimensions/: dim_accounts.sql  dim_invoices.sql  dim_payments.sql
transform/models/accountant/reports/: report_customer_balances.sql  report_customer_usages.sql  report_decrease_balance_adjustments.sql  report_increase_balance_adjustments.sql  report_monthly_customer_usages.sql
transform/models/sale_assistant/: fact_growth.sql  fact_payment_requests.sql  fact_usages.sql
transform/models/sale_assistant/dimensions/: dim_customer.sql  dim_first_cycle.sql  (+1 more)
transform/seed/: dim_billing_cycle.csv  dim_date.csv  dim_ignore_accounts.csv  dim_invoice_due_postpaid.csv  dim_invoice_due_prepaid.csv
transform/snapshots/: customers.sql  monthly_balances.sql
(+3 files in other folders)
