[tool.poetry]
name = "bizflycloud-analytics"
version = "0.1.0"
description = ""
authors = ["vuonglv <vuonglevan@vccorp.vn>"]
readme = "README.md"
packages = [{include = "bizflycloud_analytics"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
